--- a/header.css
+++ b/header.css
@@ -1,15 +1,19 @@
-.material-icons-outlined{
+.material-icons-outlined.header{
     font-size: 40px;
 }
 body {
+    /* これが無いとヘッダーの端に空白ができてしまう */
     margin: 0px;
     padding: 0px;
 }
-.page{
+main{
+    display: block;
+    /* ヘッダーの幅だけ上にマージンを取る */
     margin-top: 100px;
     z-index: 0;
 }
 .site-header{
+    /* TODO:松本君が用意してくれた画像に置き換える */
     background:rgb(0, 132, 255);
     padding: 0px 20px;
     position: fixed;
@@ -21,8 +25,6 @@ body {
     justify-content: space-between;
     z-index: 10;
 }
-.gnav{
-}
 .menu{
     display: flex;
     list-style: none;
@@ -32,7 +34,11 @@ body {
     padding-right: 20px;
 }
 .menu_item a{
+    /* アイコンの色，何か色を設定しないとクリックした後に色が変わってしまう */
     color:rgb(0, 0, 0);
+}
+.menu_item a:hover{
+    opacity: 0.5;
 }
 .logout{
     display: flex;
@@ -41,9 +47,11 @@ body {
     padding-left: 0;
     padding-right: 40px;
 }
-.logout_item{
-}
 .logout_item a{
+    /* アイコンの色，何か色を設定しないとクリックした後に色が変わってしまう */
     color:rgb(0, 0, 0);
     padding-right: 20px;
+}
+.logout_item a:hover{
+    opacity: 0.5;
 }
