2/6 ランキング機能改修

--- a/ranking.css
+++ b/ranking.css
@@ -1,15 +1,29 @@
 table {
     background-color:white;
-    width: 802px;
+    /*width: 802px;*/
     margin: 0 auto;
  }
  th {
     padding: 10px;
     font-size: 30px;
  }
- 
+
  td {
     text-align: center;
     padding: 3px 10px;
     font-size: 30px;
  }
+
+#transition{
+    display:flex;
+    text-align:center;
+    justify-content:center;
+}
+#before{
+    padding:10px;
+    color:red;
+}
+#next{
+    padding:10px;
+    color:red;
+}
